--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
+    <meta name="referrer" content="same-origin">
     <!-- CDNBye Plugin -->
     <script src="//cdn.jsdelivr.net/npm/cdnbye@latest"></script>
     <!-- JWPlayer Hlsjs Provider -->
